nextui: login form ui

--- a/next-ui/src/styles/pages/_welcome.module.scss
+++ b/next-ui/src/styles/pages/_welcome.module.scss
@@ -8,18 +8,14 @@
         border-bottom: 1px solid #e5e5e5;
         display: flex;
         align-items: center;
-        justify-content: end;
-
-
-
-
+        justify-content: flex-end;
     }
 
     .second {
         display: flex;
         min-height: 90vh;
         width: 100%;
-        overflow-x: hidden;
+        overflow: hidden;
 
         .image {
             height: 100%;
