feat: style some ui & config sub router

--- a/next-ui/src/styles/abstract/_variable.module.scss
+++ b/next-ui/src/styles/abstract/_variable.module.scss
@@ -3,10 +3,13 @@ $border-color: (
 );
 
 $text-color: (
-    'white': #fff
+    'white': #fff,
+    'white-1': #EAEAEA,
 );
 
 $bgr-color: (
     'white': #ffffff,
-    'white-1': #F3F4F6
+    'white-1': #F3F4F6,
+    'black': #000000,
+    'black-1': #33373B,
 );
